<resources>
    <string name="app_name">Quizzer</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_title">Welcome to Quizzer!</string>
    <string name="welcome_message">
        If you\'re ready to take a quick multiple-choice quiz,
        just enter your name and we can get started!
    </string>
    <string name="default_name">Einstein</string>
    <string name="name_label">Enter Your Name</string>
    <string name="topic_label">Choose topic:</string>
    <string name="start_button">Start the Quiz!</string>
    <string name="title_activity_quiz">Quiz</string>

    <string name="quiz_header">Quizzing: ...</string>
    <string name="question_count_text">Question 1 of 10</string>
    <string name="question_label">Q:</string>
    <string name="defn_text">
        A Definition will appear here... blah blah, the definition
        will be about two lines long I\'d guess...
    </string>
    <string name="radio0">One term</string>
    <string name="radio1">Another term</string>
    <string name="radio2">decoy term</string>
    <string name="radio3">Last term</string>
    <string name="submit_button">Check Answer</string>
    <string name="title_activity_results">Results</string>

    <string name="results_title">Einstein\'s Results:</string>
    <string name="results_message">Here is a message about how your did.  Blah, blah, blah</string>
    <string name="again_button">Quiz\nAgain!</string>
    <string name="home_button">Home</string>
    <string name="close_button">Close\nQuizzer</string>

    <string-array name="quiz_names">
        <item>BoardGames</item>
        <item>Your Family</item>
        <item>Project Management</item>
    </string-array>
</resources>
