<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quiz_header"
        android:id="@+id/quizHeader"
        android:gravity="center_horizontal"
        android:textColor="#ffffffff"
        android:padding="3pt"
        android:textSize="12pt"
        android:background="#ffff910b"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_count_text"
        android:id="@+id/questionCountText"
        android:layout_below="@+id/quizHeader"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:padding="1pt"
        android:textSize="7pt"
        android:textStyle="italic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/defn_text"
        android:id="@+id/defnText"
        android:gravity="left|center_horizontal"
        android:textSize="7pt"
        android:layout_below="@+id/questionCountText"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView"
        android:layout_marginTop="2pt"
        android:layout_marginLeft="3pt"
        android:textColor="#ff000000"
        android:padding="2pt"
        android:background="#ffd6e8f0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_label"
        android:id="@+id/textView"
        android:layout_below="@+id/questionCountText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold"
        android:textSize="9pt"
        android:layout_marginTop="2pt"
        android:textColor="#ff000000" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/defnText"
        android:layout_marginTop="8pt"
        android:id="@+id/answerGroup">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio0"
            android:id="@+id/radio0"
            android:enabled="true"
            android:textSize="9pt" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio1"
            android:id="@+id/radio1"
            android:enabled="true"
            android:textSize="9pt" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio2"
            android:id="@+id/radio2"
            android:enabled="true"
            android:textSize="9pt" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio3"
            android:id="@+id/radio3"
            android:enabled="true"
            android:textSize="9pt" />
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_button"
        android:id="@+id/submitButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:padding="6pt"
        android:textSize="10pt" />
</RelativeLayout>
