<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.w0276812.quizzer.Results">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/results_title"
        android:id="@+id/resultsTitle"
        android:gravity="center_horizontal"
        android:textColor="#ffffffff"
        android:padding="3pt"
        android:textSize="12pt"
        android:background="#ffff910b"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_below="@+id/resultsTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:src="@mipmap/check_icon"
        android:layout_marginTop="15pt" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:layout_below="@+id/imageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:src="@mipmap/ex_icon"
        android:layout_marginTop="15pt" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="5 Questions Correct!"
        android:id="@+id/CorrectLabel"
        android:layout_above="@+id/imageView2"
        android:layout_toRightOf="@+id/imageView"
        android:layout_toEndOf="@+id/imageView"
        android:layout_below="@+id/resultsTitle"
        android:gravity="center_vertical"
        android:textSize="9pt"
        android:textColor="#ff000000"
        android:layout_marginLeft="5pt"
        android:layout_marginTop="15pt" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="5 Question Wrong :("
        android:id="@+id/inCorrectLabel"
        android:gravity="center_vertical"
        android:textSize="9pt"
        android:textColor="#ff000000"
        android:layout_alignLeft="@+id/CorrectLabel"
        android:layout_alignStart="@+id/CorrectLabel"
        android:layout_alignBottom="@+id/imageView2"
        android:layout_alignTop="@+id/imageView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/results_message"
        android:id="@+id/resultMessage"
        android:layout_below="@+id/imageView2"
        android:layout_alignRight="@+id/resultsTitle"
        android:layout_alignEnd="@+id/resultsTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10pt"
        android:textSize="8pt"
        android:textColor="#ff272727"
        android:padding="5pt"
        android:background="#ffd6e8f0" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:baselineAligned="false"
        android:measureWithLargestChild="false">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/again_button"
            android:id="@+id/againButton"
            android:layout_weight=".25"
            android:textColor="#ff000000"
            android:textStyle="bold" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/home_button"
            android:id="@+id/homeButton"
            android:layout_weight=".25"
            android:textColor="#ff000000"
            android:textStyle="bold" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/close_button"
            android:id="@+id/closeButton"
            android:layout_weight=".25"
            android:textColor="#ff000000"
            android:textStyle="bold" />
    </LinearLayout>


</RelativeLayout>
